This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: bytesobject.c: Possible null pointer dereference due to formatfloat()
Type: crash Stage: resolved
Components: Interpreter Core Versions: Python 3.8, Python 3.7, Python 3.6
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: ZackerySpytz, miss-islington, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2018-10-03 04:53 by ZackerySpytz, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 9683 merged ZackerySpytz, 2018-10-03 04:56
PR 9684 merged miss-islington, 2018-10-03 06:01
PR 9685 merged miss-islington, 2018-10-03 06:01
Messages (5)
msg326933 - (view) Author: Zackery Spytz (ZackerySpytz) * (Python triager) Date: 2018-10-03 04:53
The PyBytes_FromStringAndSize() call in formatfloat() is not checked for failure.
msg326938 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-10-03 06:01
New changeset 96c593279400693226d5a560c420ae0fcf1731b9 by Serhiy Storchaka (Zackery Spytz) in branch 'master':
bpo-34879: Fix a possible null pointer dereference in bytesobject.c (GH-9683)
https://github.com/python/cpython/commit/96c593279400693226d5a560c420ae0fcf1731b9
msg326939 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-10-03 06:02
Thank you for your report and fix Zackery.
msg326940 - (view) Author: miss-islington (miss-islington) Date: 2018-10-03 06:33
New changeset 063755c20184e80f587d522600536d1ba70a5f7e by Miss Islington (bot) in branch '3.7':
bpo-34879: Fix a possible null pointer dereference in bytesobject.c (GH-9683)
https://github.com/python/cpython/commit/063755c20184e80f587d522600536d1ba70a5f7e
msg326941 - (view) Author: miss-islington (miss-islington) Date: 2018-10-03 06:34
New changeset 6580e52b64cb207f03a1bf86a18f088b081c10f4 by Miss Islington (bot) in branch '3.6':
bpo-34879: Fix a possible null pointer dereference in bytesobject.c (GH-9683)
https://github.com/python/cpython/commit/6580e52b64cb207f03a1bf86a18f088b081c10f4
History
Date User Action Args
2022-04-11 14:59:06adminsetgithub: 79060
2018-10-03 06:35:31serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-10-03 06:34:09miss-islingtonsetmessages: + msg326941
2018-10-03 06:33:47miss-islingtonsetnosy: + miss-islington
messages: + msg326940
2018-10-03 06:02:46serhiy.storchakasetmessages: + msg326939
2018-10-03 06:01:52miss-islingtonsetpull_requests: + pull_request9071
2018-10-03 06:01:44miss-islingtonsetpull_requests: + pull_request9070
2018-10-03 06:01:35serhiy.storchakasetnosy: + serhiy.storchaka
messages: + msg326938
2018-10-03 04:56:50ZackerySpytzsetkeywords: + patch
stage: patch review
pull_requests: + pull_request9069
2018-10-03 04:53:44ZackerySpytzcreate